adicionando dados de teste com callback do Flyway

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,10 @@ spring.datasource.password=root
 #spring.jpa.generate-ddl=true
 #spring.jpa.hibernate.ddl-auto=create
 
-#spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
+#spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create 
 #spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=src/main/resources/ddl.sql
+
+spring.flyway.locations=classpath:db/migration, db/testData
 
 spring.jpa.show-sql=true
 spring.jpa.properies.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect 
