habiliando erros na desserialização de propriedades inexistentes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,6 @@ spring.flyway.locations=classpath:db/migration, db/testData
 
 spring.jpa.show-sql=true
 spring.jpa.properies.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect 
+
+spring.jackson.deserialization.fail-on-unknown-properties=true
+spring.jackson.deserialization.fail-on-ignored-properties=true
