--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
   <description>API de delivery de comida</description>
 
   <properties>
-    <java.version>12</java.version>
+    <java.version>11</java.version>
   </properties>
 
   <dependencies>
@@ -71,6 +71,9 @@
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
+      </plugin>
+      <plugin>
+      	<artifactId>maven-failsafe-plugin</artifactId>
       </plugin>
     </plugins>
   </build>
