--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,13 @@
 		<groupId>org.apache.commons</groupId>
 		<artifactId>commons-lang3</artifactId>
 	</dependency>
+	<dependency>
+		<groupId>io.rest-assured</groupId>
+		<artifactId>rest-assured</artifactId>
+		<scope>test</scope>
+	</dependency>
+	 
+	
 	
   </dependencies>
 
